Upgrade SUSE Clients (#1510)
* mention openSUSE Leap to {sle} migration
https://github.com/SUSE/spacewalk/issues/12793
* also mention leap minor version upgrade
* move client-upgrades-uyuni.adoc to the upgrade sections
* label version number as an example

--- a/modules/client-configuration/pages/client-upgrades-uyuni.adoc
+++ b/modules/client-configuration/pages/client-upgrades-uyuni.adoc
@@ -1,6 +1,11 @@
 [[client-upgrades-uyuni]]
 = Upgrade Uyuni Clients
 
+In this section, we use openSUSE Leap as an example.
+
+== Prepare to Upgrade
+
+.Procedure: Preparing the Client Upgrade
 . At the command prompt on the {productname} Server, as root, use the [command]``spacewalk-common-channels`` command to add the appropriate channels.
 +
 ----
@@ -19,7 +24,7 @@ opensuse_leap15_2-uyuni-client
 // These are custom channels.
 // For more information, see xref:client-configuration:clients-opensuse.adoc[].
 
-. In the {productname} Server {webui}, navigate to menu:Software[Manage > Channels] and click the [systemitem]`` Uyuni Client Tools for openSUSE Leap 15.2 (x86_64)`` channel name.
+. In the {productname} Server {webui}, navigate to menu:Software[Manage > Channels] and click the [systemitem]``Uyuni Client Tools for openSUSE Leap 15.2 (x86_64)`` channel name.
 
 . In the upper right corner, click btn:[Manage Channel].
 
@@ -35,13 +40,13 @@ Unfold [systemitem]``openSUSE Leap 15.2 (x86_64)`` to see all child channels pop
 
 
 
-== Upgrade the Client
+== Upgrade
 
 To upgrade a client you replace the software repositories and update the software, and finally reboot the client.
 
 
 
-.Procedure: Updating the Client
+.Procedure: Upgrading the Client
 
 ////
 For standard clients, reactivation is not required.
@@ -53,7 +58,7 @@ For standard clients, reactivation is not required.
 With a system profile specific activation key, this system can be re-registered using the 'rhnreg_ks' command-line utility. The system is re-registered with the same id, history, groups, and channels (unless the system's base channel changes).
 Key: 	  re-1-1008b9843d44dac77f0a856f207cc2c6
 ////
-
++
 . In the {productname} Server {webui}, navigate to menu:Systems[] and click the name of the client.
 . Click menu:Software[Software Channels], and as the base channel select the openSUSE Leap {opensuse-version} channel that is listed in the [systemitem]``Customs Channels`` list.
 . In the [guimenu]``Child Channels`` pane, select the {opensuse-version} child channels.
