--- a/modules/client-configuration/nav-client-configuration-guide.adoc
+++ b/modules/client-configuration/nav-client-configuration-guide.adoc
@@ -105,6 +105,9 @@ endif::[]
 *** xref:client-upgrades-major.adoc[Major Version Upgrade]
 *** xref:client-upgrades-lifecycle.adoc[With Content Lifecycle Manager]
 *** xref:client-upgrades-product-migration.adoc[Product Migration]
+ifeval::[{uyuni-content} == true]
+*** xref:client-upgrades-uyuni.adoc[openSUSE Leap Minor Version Upgrade]
+endif::[]
 // Delete clients
 ** xref:delete-clients.adoc[Client Deletion]
 // Additional client operations
@@ -120,9 +123,6 @@ endif::[]
 *** xref:system-set-manager.adoc[System Set Manager]
 *** xref:system-groups.adoc[System Groups]
 *** xref:system-types.adoc[System Types]
-ifeval::[{uyuni-content} == true]
-*** xref:client-upgrades-uyuni.adoc[Upgrade Uyuni Clients]
-endif::[]
 // Automated Installation
 ** xref:autoinst-intro.adoc[Operating System Installation]
 *** xref:autoinst-reinstall.adoc[Reinstall Registered Systems]
