fix comment in nav

--- a/modules/client-configuration/nav-client-configuration-guide.adoc
+++ b/modules/client-configuration/nav-client-configuration-guide.adoc
@@ -45,7 +45,7 @@ endif::[]
 **** xref:contact-methods-pushssh.adoc[Push via SSH]
 // Registration overviev, clients and different options
 ** xref:registration-overview.adoc[Client Registration]
-// SLE Client Registration
+// Client Registration
 *** xref:registration-methods.adoc[Registration Methods]
 **** xref:registration-webui.adoc[Register with the Web UI]
 **** xref:registration-bootstrap.adoc[Register with Bootstrap Script]
