add a note about   selecting the appropriate architecture https://github.com/SUSE/spacewalk/issues/17459

--- a/modules/client-configuration/pages/registration-overview.adoc
+++ b/modules/client-configuration/pages/registration-overview.adoc
@@ -5,6 +5,12 @@ There are several ways to register clients to your {productname} Server.
 This section covers the various available methods.
 It also contains information specific to the operating system you intend to run on the client.
 
+[NOTE]
+====
+In the following section, descriptions often defaults to the [literal]``x86_64`` architecture.
+Replace it withother architectures if appropriate.
+====
+
 Before you begin, check that:
 
 * The client has the date and time synchronized correctly with the {productname} Server before registration.
