remove dupplicate <software> (per feedback)

--- a/modules/client-configuration/pages/autoinst-profiles.adoc
+++ b/modules/client-configuration/pages/autoinst-profiles.adoc
@@ -116,18 +116,18 @@ For more information about using variables in {ay} scripts, see xref:client-conf
 
 These are the most important sections in the {ay} installation file for installing with {productname}:
 
-* ``<add-on>`` section allows to add child channels to the installation
+* ``<add-on>`` allows to add child channels to the installation
 +
   See https://doc.opensuse.org/projects/autoyast/#Software-Selections-additional with an ``<add-on>`` example
 
 * ``<software>`` section allows to specify ``<product>`` for the Unified Installer
-+
-  See https://doc.opensuse.org/projects/autoyast/#CreateProfile-Software with a "<software>" example
 
 
 * ``<general>$SNIPPET('spacewalk/sles_no_signature_checks')</general>` disables signature checks
 
-* ``<software>`` allows to specify the correct product for the Unified Installer
+* ``<software>`` allows to specify product for the Unified Installer
++
+  See https://doc.opensuse.org/projects/autoyast/#CreateProfile-Software with a "<software>" example
 
 * ``<init-scripts config:type="list">$SNIPPET('spacewalk/minion_script')</init-scripts>`` allows the client to register to {productname} as a Salt minion.
 
