Moving file to a new place.

--- a/modules/common-workflows/pages/workflow-reducing-sync-times-over-wan.adoc
+++ b/modules/common-workflows/pages/workflow-reducing-sync-times-over-wan.adoc
@@ -1,12 +1,16 @@
-[[workflow-reducing-sync-times-over-WAN]]
+//[[workflow-reducing-sync-times-over-WAN]]
+[[syncing-files-over-WAN]]
 
-= Reducing high sync times between {productname} Server and Proxy over WAN connections
+//= Reducing high sync times between {productname} Server and Proxy over WAN connections
+
+
+= Considerations for syncing files over WAN connections
 
 Depending on what changes are executed in the WebUI or via an API call to distribution or system settings, [path]``cobbler sync`` command is required to transfer files from {productname} server to {productname} Proxy systems.
 To accomplish this, cobbler uses a list of proxies specified in [path]``/etc/cobbler/settings``.
 
 
-== Use case
+== Background
 
 Due to its design, [path]``cobbler sync`` is not able to sync only the changed or recently added files.
 
@@ -36,7 +40,7 @@ By comparison, copying a single big file of the same size as [path]``/srv/tftboo
 
 
 
-== Resolution
+== Data analysis
 
 Switching to an [path]``rsync``-based approach to copy files between {productname} Server and Proxy may help to reduce the transfer and wait times. 
 
@@ -52,13 +56,13 @@ If further help is required, contact SUSE Consulting.
 ====
 
 
-== Preparation tasks
+=== Preparation tasks
+The proposed approach using the script is benefitial in the following environment:
 
-The proposed approach is benefitial in the following environment:
 . SUSE Manager Proxy systems are connected via a WAN connection;
 . [path]``/srv/tftboot`` contains a high number of files for distributions and client PXE boot files, in total several thousand files;
 . Any proxy in [path]``/etc/cobbler/settings`` has been disabled, otherwise {productname} will continue to sync content to the proxies.
-
++
 ----
 #proxies:
 # - "sumaproxy.sumaproxy.test"
@@ -66,8 +70,7 @@ The proposed approach is benefitial in the following environment:
 ----
 
 
-== Step-by-step analysis instructions
-
+=== Analysis instructions
 
 Procedure: Analyze new sync speed
 
@@ -109,9 +112,7 @@ Ignore ports 4505 and 4506 as these are used for Salt communication.
 ====
 
 
-
-
-== Summary 
+== Conclusion 
 
 The example showed the transfer of approx. 1800 bytes  from {productname} Server to Proxy, which took around 0.3 seconds. 
 
