--- a/modules/common-workflows/pages/workflow-reducing-sync-times-over-wan.adoc
+++ b/modules/common-workflows/pages/workflow-reducing-sync-times-over-wan.adoc
@@ -3,7 +3,7 @@
 = Reducing high sync times between {productname} Server and Proxy over WAN connections
 
 Depending on what changes are executed in the WebUI or via an API call to distribution or system settings, [path]``cobbler sync`` command is required to transfer files from {productname} server to {productname} Proxy systems.
-To accomplish this, cobbler uses a list of proxies specified in [path]``/etc/cobbler/settings``.
+To accomplish this, cobbler uses a list of proxies specified in [path]``/etc/cobbler/settings.yaml``.
 
 
 == Use case
