--- a/modules/common-workflows/pages/workflow-reducing-sync-times-over-wan.adoc
+++ b/modules/common-workflows/pages/workflow-reducing-sync-times-over-wan.adoc
@@ -10,7 +10,7 @@ To accomplish this, cobbler uses a list of proxies specified in [path]``/etc/cob
 
 Due to its design, [path]``cobbler sync`` is not able to sync only the changed or recently added files.
 
-Instead, executing [path]``cobbler sync`` triggers a full sync of the [path]``/srv/tftpboot`` directory to all specified proxies configured in [path]``/etc/cobbler/settings``.
+Instead, executing [path]``cobbler sync`` triggers a full sync of the [path]``/srv/tftpboot`` directory to all specified proxies configured in [path]``/etc/cobbler/settings.yaml``.
 It is also influenced by the latency of the WAN connection between the involved systems.
 
 The process of syncing may take a considerable amount of time to finish according to the logs in [path]`` /var/log/cobbler/``.
