--- a/modules/common-workflows/pages/workflow-reducing-sync-times-over-wan.adoc
+++ b/modules/common-workflows/pages/workflow-reducing-sync-times-over-wan.adoc
@@ -57,7 +57,7 @@ If further help is required, contact SUSE Consulting.
 The proposed approach is benefitial in the following environment:
 . SUSE Manager Proxy systems are connected via a WAN connection;
 . [path]``/srv/tftboot`` contains a high number of files for distributions and client PXE boot files, in total several thousand files;
-. Any proxy in [path]``/etc/cobbler/settings`` has been disabled, otherwise {productname} will continue to sync content to the proxies.
+. Any proxy in [path]``/etc/cobbler/settings.yaml`` has been disabled, otherwise {productname} will continue to sync content to the proxies.
 
 ----
 #proxies:
