Backport. Document Debian 11.

--- a/modules/client-configuration/pages/supported-features.adoc
+++ b/modules/client-configuration/pages/supported-features.adoc
@@ -236,6 +236,16 @@ ifeval::[{suma-content} == true]
 | {check}
 | {check}
 
+| {debian} 11
+ifeval::[{uyuni-content} == true]
+| {x86_64}, aarch64, armv7l, i586
+endif::[]
+ifeval::[{suma-content} == true]
+| {x86_64}
+endif::[]
+| {cross}
+| {check}
+
 | {debian} 10
 | {x86_64}
 | {cross}
