--- a/modules/client-configuration/pages/clients-debian.adoc
+++ b/modules/client-configuration/pages/clients-debian.adoc
@@ -54,6 +54,7 @@ The products you need for this procedure are:
 | OS Version  | Product Name
 | {debian} 9  | Debian 9
 | {debian} 10 | Debian 10
+| {debian} 11 | Debian 11
 |===
 
 include::snippets/addchannels_vendor_webui.adoc[]
@@ -68,6 +69,7 @@ The channels you need for this procedure are:
 | OS Version  | Product Name
 | {debian} 9  | debian-9-pool-amd64
 | {debian} 10 | debian-10-pool-amd64
+| {debian} 11 | debian-11-pool-amd64
 |===
 
 include::snippets/addchannels_vendor_cli.adoc[]
@@ -101,6 +103,12 @@ The channels you need for this procedure are:
 | debian-10-amd64-uyuni-client
 | debian-10-amd64-main-updates-uyuni
 | debian-10-amd64-main-security-uyuni
+
+| {debian} 11
+| debian-11-pool-amd64-uyuni
+| debian-11-amd64-uyuni-client
+| debian-11-amd64-main-updates-uyuni
+| debian-11-amd64-main-security-uyuni
 
 |===
 
