Autoinst profile channels 1 #14765 keichwa (#1525)
* fix adoc syntax (superfluous + connector)

--- a/modules/client-configuration/pages/autoinst-profiles.adoc
+++ b/modules/client-configuration/pages/autoinst-profiles.adoc
@@ -11,27 +11,25 @@ This type of file is sometimes also referred to as an "answers file."
 
 Within {productname}, you can use two different types of profiles, depending on the operating system of the clients you want to install:
 
-* For {sle} clients, use {ay}.
+* For {sle} or {opensuse} clients, use {ay}.
 * For {rhel} clients, use {kickstart}.
 
 You can use both {ay} and {kickstart} profiles if you want to install clients with different operating systems.
 
-For information about how to declare profiles, see xref:client-configuration:autoinst-profiles.adoc#declare-profile[Declare the Profile]
-
-For information about {ay} profiles, see xref:client-configuration:autoinst-profiles.adoc#autoyast[AutoYast Profiles].
-
-For information about {kickstart} profiles, see xref:client-configuration:autoinst-profiles.adoc#kickstart[Kickstart Profiles].
+* For information about how to declare profiles, see xref:client-configuration:autoinst-profiles.adoc#declare-profile[Declare the Profile]
+* For information about {ay} profiles, see xref:client-configuration:autoinst-profiles.adoc#autoyast[AutoYast Profiles].
+* For information about {kickstart} profiles, see xref:client-configuration:autoinst-profiles.adoc#kickstart[Kickstart Profiles].
 
 The autoinstallation file contained in the profile can include variables and code snippets.
 For information about variables and code snippets, see xref:client-configuration:autoinst-profiles.adoc#templates-syntax[Templates Syntax].
+
 
 
 [[declare-profile]]
 == Declare the Profile
 
 When you have prepared an autoinstallation file and distribution, you can create profiles to manage autoinstallation on your {productname} Server.
-For a given distribution, the profile will determine how to install this distribution.
-
+The profile will determine how to install this distribution you selected.
 One way to create a profile is to upload an {ay} or {kickstart} file.
 Alternatively, for {kickstart} only, you can use the {webui} wizard.
 
@@ -54,7 +52,6 @@ Do not use spaces.
 +
 
 For more information about the details to include here, see xref:client-configuration:autoinst-profiles.adoc#autoyast[AutoYast Profiles] or xref:client-configuration:autoinst-profiles.adoc#kickstart[Kickstart Profiles].
-+
 
 . Click btn:[Create] to create the profile.
 
@@ -91,7 +88,7 @@ When you are creating your autoinstallation profile, you can check [guimenu]``Al
 This setting allows {productname} to automatically pick the latest distribution that is associated with the specified base channel.
 If you add new distributions later, {productname} uses the most recently created or modified.
 
-Changing the Virtualization Type usually requires changes to the profile bootloader and partition options.
+Changing the [guimenu]``Virtualization Type`` usually requires changes to the profile bootloader and partition options.
 This can overwrite your customization.
 Verify new or changed settings before saving them, by navigating to the [guimenu]``Partitioning`` tab.
 
@@ -101,12 +98,14 @@ You can change the details and settings of your autoinstallation profiles by nav
 Alternatively, navigate to menu:Systems[System List], select the client you want to provision, and navigate to the menu:Provisioning[Autoinstallation] subtab.
 
 
+
 [[autoyast]]
 == AutoYast Profiles
 
 An {ay} profile consists of a [guimenu]``Label`` that identifies the profile, an [guimenu]``Autoinstall Tree`` that points to an autoinstallable distribution, various options, and, most importantly, an {ay} installation file.
 
-The {ay} installation file is an XML file that give directions to the {ay} installer. {ay} calls it a "control file."
+The {ay} installation file is an XML file that give directions to the {ay} installer.
+{ay} calls it a "control file."
 For the full syntax of {ay} installation files, see https://doc.opensuse.org/projects/autoyast/#cha-configuration-installation-options.
 
 {suse} provides templates of {ay} installation files that you can use as a starting point for your own custom files.
@@ -115,7 +114,7 @@ Each of these profiles requires you to set some variables before you use it.
 Check the [path]``README`` file included with the script to determine which variables you need.
 For more information about using variables in {ay} scripts, see xref:client-configuration:autoinst-profiles#variables[Variables].
 
-Here are the most important sections in the {ay} installation file for installing with SUSE Manager:
+These are the most important sections in the {ay} installation file for installing with {productname}:
 
 * ``<add-on>`` section allows to add child channels to the installation
 
@@ -129,6 +128,7 @@ For more information about {ay}, see https://doc.opensuse.org/projects/autoyast/
 
 A more recent, Salt-based alternative to AutoYast, is Yomi.
 For information about Yomi, see xref:specialized-guides:salt/salt-yomi.adoc[Install with Yomi].
+
 
 
 [[kickstart]]
@@ -152,7 +152,6 @@ If you have many custom configuration files located on a client you want to rein
 
 . Include the file preservation list in your {kickstart} profile.
 
-
 . Navigate to menu:Systems[Autoinstallation > Profiles] and select the profile you want to edit, go to the menu:System Details[File Preservation] subtab, and select the file preservation list to include.
 
 [NOTE]
@@ -163,6 +162,7 @@ Only use file and directory names, you cannot use regular expression wildcards.
 ====
 
 For more information about Kickstart, see the Red Hat documentation.
+
 
 
 [[templates-syntax]]
@@ -178,9 +178,10 @@ This mechanism allows you to reinstall large numbers of systems, without having 
 You can create autoinstallation variables and code snippets within the {productname} {webui}.
 Within a profile, the [guimenu]``Autoinstallation File`` tab allows you to see the result of the substitutions.
 
-For information about variables, see xref:client-configuration:autoinst-profiles#variables[Variables].
-For information about code snippets, see xref:client-configuration:autoinst-profiles#code-snippets[Code Snippets].
-For information about escaping symbols or whole sections, see xref:client-configuration:autoinst-profiles#variables[Escaping].
+* For information about variables, see xref:client-configuration:autoinst-profiles#variables[Variables].
+* For information about code snippets, see xref:client-configuration:autoinst-profiles#code-snippets[Code Snippets].
+* For information about escaping symbols or whole sections, see xref:client-configuration:autoinst-profiles#variables[Escaping].
+
 
 
 [[variables]]
@@ -192,6 +193,7 @@ To define a variable, from the profile, navigate to the [guimenu]``Variables`` s
 For example, you could create a variable that holds the IP address of the client, and another that holds the address of its gateway.
 Those variables can then be defined for all the clients installed from the same profile.
 To do that, add these lines to the [guimenu]``Variables`` text box:
+
 ----
 ipaddr=192.168.0.28
 gateway=192.168.0.1
@@ -199,6 +201,7 @@ gateway=192.168.0.1
 
 To use the variable, prepend a [option]``$`` sign in the profile to substitute the value.
 For example, the [option]``network`` part of a {kickstart} file may look like the following:
+
 ----
 network --bootproto=static --device=eth0 --onboot=on --ip=$ipaddr \
   --gateway=$gateway
@@ -210,6 +213,7 @@ In installation files, variables use a hierarchy.
 System variables take precedence over profile variables, which in turn take precedence over distribution variables.
 
 
+
 [[code-snippets]]
 === Code Snippets
 
@@ -218,11 +222,13 @@ Navigate to menu:Systems[Autoinstallation > Autoinstallation Snippets] to see t
 
 Use a snippet by inserting the [option]``$SNIPPET()`` macro in your autoinstallation file.
 For example, in {kickstart}:
+
 ----
 $SNIPPET('spacewalk/rhel_register_script')
 ----
 
 Or, in {ay}:
+
 ----
 <init-scripts config:type="list">
   $SNIPPET('spacewalk/sles_register_script')
@@ -234,6 +240,7 @@ You can also store your own code snippets to use in autoinstallation files later
 Click btn:[Create Snippet] to create a new code snippet.
 
 This example sets up a {kickstart} snippet for a common hard drive partition configuration:
+
 ----
 clearpart --all
 part /boot --fstype ext3 --size=150 --asprimary
@@ -247,9 +254,11 @@ logvol /var --name=var vgname=vg00 --fstype ext3 --size=5000
 ----
 
 Use the snippet with, for example:
+
 ----
 $SNIPPET('my_partition')
 ----
+
 
 
 [[escaping]]
@@ -260,6 +269,7 @@ Escaping the ``$`` symbol prevents the templating engine from evaluating the sym
 
 Long scripts or strings can be escaped by wrapping them with the ``\#raw`` and ``\#end`` directives.
 For example:
+
 ----
 #raw
 #!/bin/bash
@@ -271,6 +281,7 @@ done
 
 Any line with a ``#`` symbol followed by a whitespace is treated as a comment and is therefore not evaluated.
 For example:
+
 ----
 # start some section (this is a comment)
 echo "Hello, world"
