--- a/modules/client-configuration/pages/autoinst-profiles.adoc
+++ b/modules/client-configuration/pages/autoinst-profiles.adoc
@@ -109,7 +109,7 @@ The {ay} installation file is an XML file that give directions to the {ay} insta
 For the full syntax of {ay} installation files, see https://doc.opensuse.org/projects/autoyast/#cha-configuration-installation-options.
 
 {suse} provides templates of {ay} installation files that you can use as a starting point for your own custom files.
-You will find them at https://github.com/SUSE/manager-build-profiles in the [path]``AutoYast`` directory.
+You will find the templates at https://github.com/SUSE/manager-build-profiles in the [path]``AutoYast`` directory.
 Each of these profiles requires you to set some variables before you use it.
 Check the [path]``README`` file included with the script to determine which variables you need.
 For more information about using variables in {ay} scripts, see xref:client-configuration:autoinst-profiles#variables[Variables].
