Autoinst profile channels 2 #14765 keichwa (#1527)
* "add-on" and "software" features in Autoyast section
https://github.com/SUSE/spacewalk/issues/14765
* Update modules/client-configuration/pages/autoinst-profiles.adoc
Co-authored-by: Ornela Marić <omaric@suse.com>
* delete duplicate <software> item (per feedback)

--- a/modules/client-configuration/pages/autoinst-profiles.adoc
+++ b/modules/client-configuration/pages/autoinst-profiles.adoc
@@ -109,18 +109,22 @@ The {ay} installation file is an XML file that give directions to the {ay} insta
 For the full syntax of {ay} installation files, see https://doc.opensuse.org/projects/autoyast/#cha-configuration-installation-options.
 
 {suse} provides templates of {ay} installation files that you can use as a starting point for your own custom files.
-You will find them at https://github.com/SUSE/manager-build-profiles in the directory named [path]``AutoYast``.
+You will find the templates at https://github.com/SUSE/manager-build-profiles in the [path]``AutoYast`` directory.
 Each of these profiles requires you to set some variables before you use it.
 Check the [path]``README`` file included with the script to determine which variables you need.
 For more information about using variables in {ay} scripts, see xref:client-configuration:autoinst-profiles#variables[Variables].
 
 These are the most important sections in the {ay} installation file for installing with {productname}:
 
-* ``<add-on>`` section allows to add child channels to the installation
+* ``<add-on>`` allows to add child channels to the installation
++
+  See https://doc.opensuse.org/projects/autoyast/#Software-Selections-additional with an ``<add-on>`` example
 
 * ``<general>$SNIPPET('spacewalk/sles_no_signature_checks')</general>` disables signature checks
 
-* ``<software>`` allows to specify the correct product for the Unified Installer
+* ``<software>`` allows to specify product for the Unified Installer
++
+  See https://doc.opensuse.org/projects/autoyast/#CreateProfile-Software with a "<software>" example
 
 * ``<init-scripts config:type="list">$SNIPPET('spacewalk/minion_script')</init-scripts>`` allows the client to register to {productname} as a Salt minion.
 
