Fixing vare-reported errors.

--- a/modules/installation-and-upgrade/pages/proxy-setup.adoc
+++ b/modules/installation-and-upgrade/pages/proxy-setup.adoc
@@ -317,7 +317,7 @@ Thu Jun  3 15:18:49 2021 - DEBUG | running shell triggers from /var/lib/cobbler/
 Thu Jun  3 15:18:49 2021 - DEBUG | shell triggers finished successfully
 ----
 
-The transfer amount was roughly 1.8GB.
+The transfer amount was roughly 1.8 GB.
 The transfer took almost 30 minutes.
 
 By comparison, copying a single big file of the same size as [literal]``/srv/tftboot`` completes  within several minutes.
@@ -382,7 +382,7 @@ cobbler sync
   The number shown on this tab gives the total number of conversations captured between SUSE Manager and SUSE Manager Proxy.
 . Look for the column [guimenu]``Duration``.
 * Start by sorting in ascending order to find out the minimal amount of time it took to transfer a file.
-* Continue by sorting in descending order to find out the maximum values for the big files, e.g. kernel and initrd transfers.
+* Continue by sorting in descending order to find out the maximum values for the big files, for example kernel and initrd transfers.
 +
 [NOTE]
 ====
