--- a/modules/installation-and-upgrade/pages/proxy-setup.adoc
+++ b/modules/installation-and-upgrade/pages/proxy-setup.adoc
@@ -394,7 +394,7 @@ Ignore ports 4505 and 4506 as these are used for Salt communication.
 
 The example showed the transfer of approx. 1800 bytes  from {productname} Server to Proxy, which took around 0.3 seconds.
 
-While there were not many big files, the high number of smallerf files resulted in establishing a new connection for every single file which had to be transferred.
+While there were not many big files, the high number of smaller files resulted in high number of established connections as new TCP connection is created for every single transferred file.
 
-Therefore, knowing the minimal mount of transfetr time and a number of connections needed (approx. 5000 in the example), gives an approximate estimated time for the overall transfer time: 5000 * 0.3 / 60 = 25 minutes.
+Therefore, knowing the minimal amount of transfer time and a number of connections needed (approx. 5000 in the example), gives an approximate estimated time for the overall transfer time: 5000 * 0.3 / 60 = 25 minutes.
 
