Moved the document to tshooting.

--- a/modules/administration/nav-administration-guide.adoc
+++ b/modules/administration/nav-administration-guide.adoc
@@ -84,6 +84,7 @@ endif::[]
 *** xref:tshoot-custom-channel.adoc[Troubleshooting Custom Channel]
 *** xref:tshoot-diskspace.adoc[Troubleshooting Disk Space]
 *** xref:tshoot-firewalls.adoc[Troubleshooting Firewalls]
+*** xref:tshoot-highsynctimesoverwan.adoc[Troubleshooting high sync times over WAN]
 *** xref:tshoot-inactiveclients.adoc[Troubleshooting Inactive Clients]
 *** xref:tshoot-iss.adoc[Troubleshooting Inter-Server Synchronization]
 *** xref:tshoot-localcert.adoc[Troubleshooting Local Certificates]
