--- a/modules/administration/pages/tshoot-highsynctimesoverwan.adoc
+++ b/modules/administration/pages/tshoot-highsynctimesoverwan.adoc
@@ -23,11 +23,11 @@ If more detailed instructions are required, put them in a "Resolving" procedure:
 
 
 Depending on what changes are executed in the WebUI or via an API call to distribution or system settings, [literal]``cobbler sync`` command may be required to transfer files from {productname} server to {productname} Proxy systems.
-To accomplish this, cobbler uses a list of proxies specified in [literal]``/etc/cobbler/settings.yaml``.
+To accomplish this, cobbler uses a list of proxies specified in [literal]``/etc/cobbler/settingsl``.
 
 Due to its design, [literal]``cobbler sync`` is not able to sync only the changed or recently added files.
 
-Instead, executing [literal]``cobbler sync`` triggers a full sync of the [literal]``/srv/tftpboot`` directory to all specified proxies configured in [literal]``/etc/cobbler/settings.yaml``.
+Instead, executing [literal]``cobbler sync`` triggers a full sync of the [literal]``/srv/tftpboot`` directory to all specified proxies configured in [literal]``/etc/cobbler/settings``.
 It is also influenced by the latency of the WAN connection between the involved systems.
 
 The process of syncing may take a considerable amount of time to finish according to the logs in [literal]`` /var/log/cobbler/``.
@@ -69,11 +69,11 @@ If further help is required, contact SUSE Consulting.
 ====
 
 
-The proposed approach using the script is benefitial in the following environment:
+The proposed approach using the script is beneficial in the following environment:
 
 * SUSE Manager Proxy systems are connected via a WAN connection;
 * [literal]``/srv/tftboot`` contains a high number of files for distributions and client PXE boot files, in total several thousand files;
-* Any proxy in [literal]``/etc/cobbler/settings.yaml`` has been disabled, otherwise {productname} will continue to sync content to the proxies.
+* Any proxy in [literal]``/etc/cobbler/settingsl`` has been disabled, otherwise {productname} will continue to sync content to the proxies.
 +
 ----
 #proxies:
@@ -122,7 +122,7 @@ Ignore ports 4505 and 4506 as these are used for Salt communication.
 
 
 //=== Conclusion 
-The example showed the transfer of approx. 1800 bytes from {productname} Server to Proxy, which took around 0.3 seconds.
+Analysis of the TCPdumps showed the transfer of small files with a size of approx. 1800 bytes from {productname} Server to Proxy took around 0.3 seconds.
 
 While there were not many big files, the high number of smaller files resulted high number of established connections as new TCP connection is created for every single transferred file.
 
