--- a/modules/administration/pages/tshoot-highsynctimesoverwan.adoc
+++ b/modules/administration/pages/tshoot-highsynctimesoverwan.adoc
@@ -22,7 +22,7 @@ If more detailed instructions are required, put them in a "Resolving" procedure:
 
 
 
-Depending on what changes are executed in the WebUI or via an API call to distribution or system settings, [literal]``cobbler sync`` command may be required to transfer files from {productname} server to {productname} Proxy systems.
+Depending on what changes are executed in the WebUI or via an API call to distribution or system settings, [literal]``cobbler sync`` command may be required to transfer files from {productname} Server to {productname} Proxy systems.
 To accomplish this, cobbler uses a list of proxies specified in [literal]``/etc/cobbler/settingsl``.
 
 Due to its design, [literal]``cobbler sync`` is not able to sync only the changed or recently added files.
