--- a/modules/administration/pages/tshoot-highsynctimesoverwan.adoc
+++ b/modules/administration/pages/tshoot-highsynctimesoverwan.adoc
@@ -23,7 +23,7 @@ If more detailed instructions are required, put them in a "Resolving" procedure:
 
 
 Depending on what changes are executed in the WebUI or via an API call to distribution or system settings, [literal]``cobbler sync`` command may be required to transfer files from {productname} Server to {productname} Proxy systems.
-To accomplish this, cobbler uses a list of proxies specified in [literal]``/etc/cobbler/settingsl``.
+To accomplish this, cobbler uses a list of proxies specified in [literal]``/etc/cobbler/settings``.
 
 Due to its design, [literal]``cobbler sync`` is not able to sync only the changed or recently added files.
 
