--- a/modules/administration/pages/tshoot-highsynctimesoverwan.adoc
+++ b/modules/administration/pages/tshoot-highsynctimesoverwan.adoc
@@ -32,7 +32,7 @@ It is also influenced by the latency of the WAN connection between the involved 
 
 The process of syncing may take a considerable amount of time to finish according to the logs in [literal]``/var/log/cobbler/``.
 
-In one example, it started at:
+For example, it started at:
 
 ----
 Thu Jun  3 14:47:35 2021 - DEBUG | running python triggers from /var/lib/cobbler/triggers/task/sync/pre/*
