--- a/modules/administration/pages/tshoot-highsynctimesoverwan.adoc
+++ b/modules/administration/pages/tshoot-highsynctimesoverwan.adoc
@@ -64,7 +64,7 @@ Before running the script, you need to manually edit it and set correctly [liter
 [WARNING]
 ====
 There is no support available for individual adjustments of the script.
-The script and the comments inside aim to provide a good overview of the process and steps to be taken into consideration.
+The script and the comments inside aim to provide an overview of the process and steps to be taken into consideration.
 If further help is required, contact SUSE Consulting.
 ====
 
