--- a/modules/administration/pages/tshoot-highsynctimesoverwan.adoc
+++ b/modules/administration/pages/tshoot-highsynctimesoverwan.adoc
@@ -55,8 +55,7 @@ By comparison, copying a single big file of the same size as [literal]``/srv/tft
 //== Resolution and analysis
 Switching to an [literal]``rsync``-based approach to copy files between {productname} Server and Proxy may help to reduce the transfer and wait times.
 
-To accomplish this task, a script has been developed.
-It is available for download at <https://suse.my.salesforce.com/sfc/p/1i000000gLOd/a/1i000000ll5B/B2AmvIJN2_JsAyjTQzCVP_x5ioVgd0bYN9X9NpMugS8>.
+A script to accomplish this task is available for download at https://suse.my.salesforce.com/sfc/p/1i000000gLOd/a/1i000000ll5B/B2AmvIJN2_JsAyjTQzCVP_x5ioVgd0bYN9X9NpMugS8.
 
 The script does not accept command line options.
 Before running the script, you need to manually edit it and set correctly [literal]``SUMAHOSTNAME``, [literal]``SUMAIP`` and [literal]``SUMAPROXY1`` variables for it to work correctly.
