--- a/modules/administration/pages/tshoot-highsynctimesoverwan.adoc
+++ b/modules/administration/pages/tshoot-highsynctimesoverwan.adoc
@@ -82,7 +82,7 @@ The proposed approach using the script is beneficial in the following environmen
 
 Procedure: Analyze new sync speed
 
-. Take a TCPdump between SUSE Manager and the involved systems.
+. Take a dump of the TCP traffic between {productname} and the involved systems.
 * On SUSE Manager Server:
 +
 ----
