--- a/modules/administration/pages/tshoot-highsynctimesoverwan.adoc
+++ b/modules/administration/pages/tshoot-highsynctimesoverwan.adoc
@@ -96,7 +96,7 @@ tcpdump -i ethX -s 200 host <ip-address-of-susemanager> and not ssh
 ----
 +
 * This will only capture a package size of 200 which is sufficient to run an analysis.
-* Adjust ethX to the respective network interface SUSE Manager uses to communicate with the proxy.
+* Adjust ethX to the respective network interface {productname} uses to communicate with the proxy.
 * At last, ssh communication will not be captured to reduce the number of packages even further.
 . Start a cobbler sync.
 * To force a sync, delete the cobbler json cache file first and then issue cobbler sync:
