--- a/modules/client-configuration/pages/clients-rh-rhui.adoc
+++ b/modules/client-configuration/pages/clients-rh-rhui.adoc
@@ -124,6 +124,9 @@ This requires that you perform the import procedure three times, to create three
 
 == Add Software Channels
 
+// 2022-04-21, ke:
+// Section sequence according to https://github.com/uyuni-project/uyuni-docs/pull/1535
+
 Before you register {redhat} clients to your {productname} Server, you need to add the required software channels, and synchronize them.
 
 ifeval::[{suma-content} == true]
