--- a/modules/common-workflows/pages/workflow-client-onboarding.adoc
+++ b/modules/common-workflows/pages/workflow-client-onboarding.adoc
@@ -1,5 +1,5 @@
-[[workflow-onboarding]]
-= Onboarding
+[[workflow-client-onboarding]]
+= Client onboarding
 
 {productname} is all about managing client systems.
 So one of the first things you need to do is onboard some clients.
