--- a/modules/common-workflows/nav-common-workflows-guide.adoc
+++ b/modules/common-workflows/nav-common-workflows-guide.adoc
@@ -10,9 +10,9 @@ endif::[]
 
 
 * xref:common-workflows-overview.adoc[Common Workflows]
+** xref:workflow-client-onboarding.adoc[Client Onboarding]
 ** xref:workflow-configuration-management.adoc[Configuration Management]
 ** xref:workflow-content-lifecycle-management.adoc[Content Lifecycle Management]
-** xref:workflow-onboarding.adoc[Onboarding]
 
 // License
 ifdef::backend-pdf[]
