--- a/modules/client-configuration/pages/clients-sle.adoc
+++ b/modules/client-configuration/pages/clients-sle.adoc
@@ -14,8 +14,6 @@ This section contains information about registering clients running these {sle} 
 * {sles} for SAP{nbsp}12{nbsp}SP5
 ////
 
-[NOTE]
-====
 Use the instructions in this chapter for preparing all {sle} products, including:
 
 * {sles} for SAP
@@ -24,9 +22,11 @@ Use the instructions in this chapter for preparing all {sle} products, including
 * {sle} Real Time
 
 You can also use these instructions for older {sle} versions and service packs.
-====
 
 // There are probably some support statements that we need to make here. Are SLE clients supported on Uyuni? --LKB 2020-08-12
+
+include::snippets/arch-other-note.adoc[]
+
 
 
 == Add Software Channels
