include arch-other note to all "add software channel sections

--- a/modules/client-configuration/pages/clients-rh-rhui.adoc
+++ b/modules/client-configuration/pages/clients-rh-rhui.adoc
@@ -199,6 +199,8 @@ include::snippets/manual_associate.adoc[]
 
 Before you register {redhat} clients to your {productname} Server, you need to add the required software channels, and synchronize them.
 
+include::snippets/arch-other-note.adoc[]
+
 ifeval::[{suma-content} == true]
 
 Your {susemgr} subscription entitles you to the tools channels for {sleses} (also known as {redhat} Expanded Support or RES).
