--- a/modules/client-configuration/pages/clients-slemicro.adoc
+++ b/modules/client-configuration/pages/clients-slemicro.adoc
@@ -40,6 +40,8 @@ transactional-update pkg install salt-transactional-update
 
 Before you register {micro} clients to your {productname} Server, you need to add the required software channels, and synchronize them.
 
+include::snippets/arch-other-note.adoc[]
+
 ifeval::[{suma-content} == true]
 The products you need for this procedure are:
 
