--- a/modules/client-configuration/pages/clients-opensuseleap.adoc
+++ b/modules/client-configuration/pages/clients-opensuseleap.adoc
@@ -16,6 +16,8 @@ Before you register {opensuse} clients to your {productname} Server, you need to
 The architectures currently supported are: `x86_64` and `aarch64`.
 For full list of supported products and architectures, see xref:client-configuration:supported-features.adoc[].
 
+include::snippets/arch-other-note.adoc[]
+
 //The products you need for this procedure are:
 For example, when working with `x86_64` architecture, you need this product:
 
