--- a/modules/client-configuration/pages/clients-sleses.adoc
+++ b/modules/client-configuration/pages/clients-sleses.adoc
@@ -42,7 +42,6 @@ Traditional clients are not available on {es}{nbsp}8.
 
 == Add Software Channels
 
-
 For {es} clients, some required packages are contained on the {rhel} or {centos} installation media.
 You must have these packages installed before you can register a {es} client.
 
@@ -57,6 +56,8 @@ You need an activation key associated with the correct {es} channels.
 For more information about activation keys, see xref:client-configuration:activation-keys.adoc[].
 
 ifeval::[{suma-content} == true]
+
+include::snippets/arch-other-note.adoc[]
 
 The products you need for this procedure are:
 
