--- a/modules/client-configuration/pages/clients-ubuntu-old.adoc
+++ b/modules/client-configuration/pages/clients-ubuntu-old.adoc
@@ -36,6 +36,8 @@ However, the root user on {ubuntu} is disabled by default, so to use bootstrappi
 
 Before you register {ubuntu} clients to your {productname} Server, you need to add the required software channels, and synchronize them.
 
+include::snippets/arch-other-note.adoc[]
+
 ifeval::[{suma-content} == true]
 
 The products you need for this procedure are:
