add "minimal" (to be use instead of "jeos")
https://github.com/SUSE/spacewalk/issues/17521

--- a/modules/ROOT/pages/_partials/entities.adoc
+++ b/modules/ROOT/pages/_partials/entities.adoc
@@ -35,6 +35,7 @@
 :sp-version: SP2
 :sp-version-l: sp2
 :jeos: JeOS
+:minimal: Minimal
 :scc: SUSE Customer Center
 :sls: SUSE Linux Enterprise Server
 :sles: SUSE Linux Enterprise Server
