keep jeos here (rh)

--- a/modules/client-configuration/pages/clients-sleses.adoc
+++ b/modules/client-configuration/pages/clients-sleses.adoc
@@ -162,6 +162,7 @@ include::snippets/appstream_admon.adoc[]
 [[add.base.media]]
 === Add Base Media
 
+// 2022-04-26, ke: Here we can keep the "jeos" abbrev (rh product line)
 The base {es} channel does not contain any packages, because {suse} does not provide {rhel} or {centos} base media.
 You need to obtain base media from {redhat} or {centos}, which you can add as a child channel to the {es} parent channel.
 To ensure you have all the packages you need, use a full DVD image, not a minimal or {jeos} image.
