minimal sles in nav

--- a/modules/installation-and-upgrade/nav-installation-and-upgrade-guide.adoc
+++ b/modules/installation-and-upgrade/nav-installation-and-upgrade-guide.adoc
@@ -28,7 +28,8 @@ ifeval::[{suma-content} == true]
 *** xref:install-proxy-unified.adoc[Install Proxy]
 endif::[]
 ifeval::[{suma-content} == true]
-*** xref:install-vm.adoc[Install Server in a Virtual Machine with JeOS]
+// Maybe, we must find a way to abbreviate this title
+*** xref:install-vm.adoc[Install Server in a Virtual Machine with Minimal SLES]
 endif::[]
 ifeval::[{uyuni-content} == true]
 *** xref:install-uyuni.adoc[Install Uyuni Server with openSUSE]
