Add notes about containers module, remove SSH relocation info

--- a/modules/installation-and-upgrade/pages/proxy-container-installation.adoc
+++ b/modules/installation-and-upgrade/pages/proxy-container-installation.adoc
@@ -47,6 +47,11 @@ Container host used as a base for {productname} Proxy containers needs to be fir
 For more information how to register salt client to the {productname} Server see xref:client-configuration:registration-overview.adoc[].
 ====
 
+[NOTE]
+====
+[literal]``Containers Module`` is required to be available for container host.
+====
+
 {productname} Proxy containers are using [literal]``podman`` and [literal]``systemd`` to run and manage all proxy containers.
 
 First step is to install containers control files provided by package [literal]``uyuni-proxy-systemd-services``
@@ -55,9 +60,13 @@ First step is to install containers control files provided by package [literal]`
 [[proc-installation-proxy-containers-services]]
 .Procedure: Installation Of Container Services For {productname} Proxy
 
+. Assign [literal]``Containers Module`` software channel to the container host in the {productname}.
++
+For information how to assign software channels to the system see xref:administration:channel-management.adoc[].
+
 . Log in as `root` on the container host.
 
-. Install {productname} Proxy service package:
+. Manually install {productname} Proxy service package:
 +
 
 ----
@@ -85,34 +94,16 @@ In this file it is possible to modify path where proxy configuration is expected
 - [literal]`CONFIG_DIR`=[path]`/etc/uyuni/proxy`
 
 
-
-[[installation-proxy-containers-control-plane-ssh]]
-== Set management SSH listening port on different then 22
-
-One of the containers providing {productname} Proxy services is a SSH container. This container main task is to provide bridge between {productname} Server and SSH Salt clients over isolated networks. This container however has to listen on standard SSH port 22/TCP. It is therefor required that if SSH service is used on container host its listening port must be different then 22/TCP.
-
-[IMPORTANT]
-====
-If SSH service is used on container host its listening port must be different then 22/TCP.
-====
-
 [[installation-proxy-containers-firewall-rules]]
 == Allow network access for provided services on container host firewall
 
 {productname} Proxy containers work as so called node-port service. This means proxy container pod shares container host network TCP and UDP port space. For this reason container host firewall must be configured to accept incoming traffic on ports used by {productname} Proxy containers. Those ports are:
 
-- 22/TCP
-- 69/UDP
-- 80/TCP
-- 443/TCP
-- 4505/TCP
-- 4506/TCP
-- 8080/TCP
-
-[NOTE]
-====
-Do not forget to allow access to containers host SSH port selected in previous installation step if needed.
-====
-
+- 69/UDP - TFTP
+- 80/TCP - HTTP
+- 443/TCP - HTTPS
+- 4505/TCP - Salt
+- 4506/TCP - Salt
+- 8022/TCP - SSH
 
 Continue with setting up the installed {productname} Proxy as a containers at xref:proxy-container-setup.adoc[].
