--- a/modules/installation-and-upgrade/pages/install-vm.adoc
+++ b/modules/installation-and-upgrade/pages/install-vm.adoc
@@ -1,12 +1,12 @@
 [[install-vm]]
-= Install SUSE Manager in a Virtual Machine Environment with JeOS
+= Install SUSE Manager in a Virtual Machine Environment with {minimalsles}
 
 
 
 [[quickstart.sect.kvm.settings]]
 == Virtual Machine Manager (virt-manager) Settings
 
-This chapter provides the required Kernel Virtual Machine (KVM) settings for installation of {sle} Just Enough Operating System (JeOS) as the base for {productname}.
+This chapter provides the required Kernel Virtual Machine (KVM) settings for installation of {minimalsles} as the base for {productname}.
 KVM combined with Virtual Machine Manager (_virt-manager_) will be used as a sandbox for this installation.
 
 // This section needs revision its still ugly (LKB, KE), but now updated (KE)
